# lude

./: .gitignore  .windsurfrules  1_bayesian_optuna_3.ipynb  1_bayesian_optuna_4.ipynb  1_bayesian_optuna_5.ipynb  1_bayesian_optuna_6.ipynb  1_bayesian_optuna_custom_3.ipynb  1_bayesian_optuna_custom_4.ipynb  1_bayesian_optuna_custom_5.ipynb  1_bayesian_optuna_custom_6.ipynb  2_bayesian_optuna_3.ipynb  2_bayesian_optuna_4.ipynb  2_bayesian_optuna_5.ipynb  2_bayesian_optuna_6.ipynb  2_bayesian_optuna_custom_3.ipynb  2_bayesian_optuna_custom_4.ipynb  2_bayesian_optuna_custom_5.ipynb  2_bayesian_optuna_custom_6.ipynb  3_bayesian_optuna_3.ipynb  3_bayesian_optuna_4.ipynb  3_bayesian_optuna_5.ipynb  3_bayesian_optuna_6.ipynb  3_bayesian_optuna_custom_3.ipynb  3_bayesian_optuna_custom_4.ipynb  3_bayesian_optuna_custom_5.ipynb  3_bayesian_optuna_custom_6.ipynb  4_bayesian_optuna_3.ipynb  4_bayesian_optuna_4.ipynb  4_bayesian_optuna_5.ipynb  4_bayesian_optuna_6.ipynb  4_bayesian_optuna_custom_3.ipynb  4_bayesian_optuna_custom_4.ipynb  4_bayesian_optuna_custom_5.ipynb  4_bayesian_optuna_custom_6.ipynb  5_bayesian_optuna_3.ipynb  5_bayesian_optuna_4.ipynb  5_bayesian_optuna_5.ipynb  5_bayesian_optuna_6.ipynb  5_bayesian_optuna_custom_3.ipynb  5_bayesian_optuna_custom_4.ipynb  (+59 more)
.claude/: settings.local.json
.promptx/: .xml-upgrade-backup-done  pouch.json
125_1/: more_factor_test_origin_code_10.py
125_2/: more_factor_test_origin_code_10.py
125_3/: 5_bayesian_optuna_custom_4.ipynb  5_bayesian_optuna_custom_6.ipynb  more_factor_test_origin_code_10.py
140_2/: cal_factor_util.py  (+2 more)
(+321 files in other folders)
