[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lude"
version = "0.1.0"
description = "可转债多因子优化系统"
readme = "README.md"
authors = [
    {name = "lude", email = "example@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "optuna",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
]
